--- a/Crunchyroll_Premium/popup.html
+++ b/Crunchyroll_Premium/popup.html
@@ -39,7 +39,7 @@
 </html>
 <script src="popup.js"></script>
 <style>
-  html {
+  html, body {
     position: relative;
     min-width: 310px;
     min-height: 500px;
