--- a/index.html
+++ b/index.html
@@ -63,23 +63,19 @@
 		   <button class="close-modal">×</button>
 		   <div class="download-item">
 			<span class="partdditem quality not-copyable">Changelog</span>
-			<span class="partdditem size not-copyable">v1.2.0</span>
+			<span class="partdditem size not-copyable">v1.2.1.1</span>
 		   </div>
 		   <div class="download-item">
 			<span id="changelog" class="partdditem quality not-copyable" style="font-family: 'SFProDisplay-Regular';">
 				<strong>Update available:</strong><br/>
-				- Fix <strong>Crunchyroll Beta</strong> compatibility<br/>
-				- Fix Manifest & popup
+				- Fix videos gratuitos sem utilização do forçar MP4<br/>
+				- Fix caixa de download estando invisível
         - Add chromecast workaround
 			</span>
 		   </div>
 		   <div class="download-item">
 		   	<span class="partdditem quality not-copyable">Download (pc)</span>
-		   	<a class="partdditem down-icon" href="https://github.com/mateus7g/crp-iframe-player/releases/download/v1.2.0/Crunchyroll_Premium.zip" target="_top" download></a>
-		   </div>
-		   <div class="download-item">
-		   	<span class="partdditem quality not-copyable">Download (kiwi)</span>
-		   	<a class="partdditem down-icon" href="https://github.com/mateus7g/crp-iframe-player/releases/download/v1.2.0/Crunchyroll_Premium_Kiwi-Browser.zip" target="_top" download></a>
+		   	<a class="partdditem down-icon" href="https://github.com/Rgern100/crp-iframe-player-Firefox/releases/download/1.2.1.1/crunchyroll.crp.iframe-1.2.1.1.xpi" target="_top" download></a>
 		   </div>
 	</div>
 	<div id="player_div"></div>
