--- a/index.html
+++ b/index.html
@@ -70,11 +70,10 @@
 				<strong>Update available:</strong><br/>
 				- Fix videos gratuitos sem utilização do forçar MP4<br/>
 				- Fix caixa de download estando invisível
-        - Add chromecast workaround
 			</span>
 		   </div>
 		   <div class="download-item">
-		   	<span class="partdditem quality not-copyable">Download (pc)</span>
+		   	<span class="partdditem quality not-copyable">Download (firefox pc)</span>
 		   	<a class="partdditem down-icon" href="https://github.com/Rgern100/crp-iframe-player-Firefox/releases/download/1.2.1.1/crunchyroll.crp.iframe-1.2.1.1.xpi" target="_top" download></a>
 		   </div>
 	</div>
