--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		   </div>
 		   <div class="download-item">
 		   	<span class="partdditem quality not-copyable">Download (firefox pc)</span>
-		   	<a class="partdditem down-icon" href="https://github.com/Rgern100/crp-iframe-player-Firefox/releases/download/1.2.1.1/crunchyroll.crp.iframe-1.2.1.1.xpi" target="_top" download></a>
+		   	<a class="partdditem down-icon" href="https://github.com/Rgern100/crp-iframe-player-Firefox/releases/latest" target="_top" download></a>
 		   </div>
 	</div>
 	<div id="player_div"></div>
