--- a/index.html
+++ b/index.html
@@ -74,11 +74,10 @@
 		   </div>
 		   <div class="download-item">
 		   	<span class="partdditem quality not-copyable">Download (firefox pc)</span>
-		   	<a class="partdditem down-icon" href="https://github.com/Rgern100/crp-iframe-player-Firefox/releases/latest" target="_top" download></a>
+		   	<a class="partdditem down-icon" href="https://github.com/Rgern100/crp-iframe-player-Firefox/releases/latest" target="_blank" download></a>
 		   </div>
 	</div>
 	<div id="player_div"></div>
 	<script src="assets/js/player.js"></script>
 </body>
 </html>
-
