--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
 		   <button class="close-modal">×</button>
 		   <div class="download-item">
 			<span class="partdditem quality not-copyable">Changelog</span>
-			<span class="partdditem size not-copyable">v1.2.1.1</span>
+			<span class="partdditem size not-copyable">v1.2.2</span>
 		   </div>
 		   <div class="download-item">
 			<span id="changelog" class="partdditem quality not-copyable" style="font-family: 'SFProDisplay-Regular';">
 				<strong>Update available:</strong><br/>
-				- Fix videos gratuitos sem utilização do forçar MP4<br/>
-				- Fix caixa de download estando invisível
+				- Fix <strong>Crunchyroll Beta</strong> compatibility<br/>
+				- Fix WebVideoCaster button
+				- Fix popup default values
 			</span>
 		   </div>
 		   <div class="download-item">
