--- a/index.html
+++ b/index.html
@@ -63,14 +63,12 @@
 		   <button class="close-modal">×</button>
 		   <div class="download-item">
 			<span class="partdditem quality not-copyable">Changelog</span>
-			<span class="partdditem size not-copyable">v1.2.2</span>
+			<span class="partdditem size not-copyable">v1.3.0a</span>
 		   </div>
 		   <div class="download-item">
 			<span id="changelog" class="partdditem quality not-copyable" style="font-family: 'SFProDisplay-Regular';">
 				<strong>Update available:</strong><br/>
-				- Fix <strong>Crunchyroll Beta</strong> compatibility<br/>
-				- Fix WebVideoCaster button
-				- Fix popup default values
+				- Fix <strong>Crunchyroll Beta</strong><br/>
 			</span>
 		   </div>
 		   <div class="download-item">
